added HTTP API endpoints to set node config and output images
